@startuml free_ap_applicative

!include https://raw.githubusercontent.com/ncosta-ic/catppuccin-macchiato-plantuml-theme/main/theme.puml


hide empty members

interface "Functor<F>" <<interface>>
interface "Applicative<F>" <<interface>>

class "FreeApFunctor<F>" <<class>> {
  + Kind<FreeApKind.Witness<F>, B> map(Function<A, B> f, Kind<FreeApKind.Witness<F>, A> fa)
}

class "FreeApApplicative<F>" <<class>> {
  + Kind<FreeApKind.Witness<F>, A> of(A value)
  + Kind<FreeApKind.Witness<F>, B> ap(Kind<FreeApKind.Witness<F>, Function<A, B>> ff, Kind<FreeApKind.Witness<F>, A> fa)
}

interface "FreeApKind<F, A>" <<interface>>

interface "FreeAp<F, A>" <<sealed interface>> {
  + {static} FreeAp<F, A> pure(A value)
  + {static} FreeAp<F, A> lift(Kind<F, A> fa)
  + <B> FreeAp<F, B> map(Function<A, B> f)
  + <B> FreeAp<F, B> ap(FreeAp<F, Function<A, B>> ff)
  + <G> Kind<G, A> foldMap(Natural<F, G> nat, Applicative<G> app)
}

"FreeApFunctor<F>" .up.|> "Functor<F>" : implements
"FreeApApplicative<F>" .up.|> "Applicative<F>" : implements
"FreeApApplicative<F>" -right-|> "FreeApFunctor<F>" : extends

"FreeApApplicative<F>" ..> "FreeApKind<F, A>" : operates on Kind<FreeApKind.Witness<F>, A>
"FreeApApplicative<F>" ..> "FreeAp<F, A>" : uses methods of

@enduml
